Fixed the icons at the top collapsing into things they didn't need to.

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@
 #socialBar {
 	padding: 0;
 	height: 25px;
+	background-color: bg-primary;
 }
 
 ul.list-inline>li {
@@ -93,4 +94,8 @@ ul.list-inline>li {
 
 .btn-group {
 	margin: 25px 0px 50px 0px ;
+}
+
+#testBackgroundColor {
+	background-color: red;
 }
